Actions
Bug #10323
closedcpcgen_parse_model() gets value check wrong
Start date:
2019-01-30
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage smatch
Gerrit CR:
External Bug:
Description
The long returned from strtol() cannot be more than UINT_MAX.
Related issues
Updated by John Levon over 4 years ago
- Tags changed from needs-triage to needs-triage smatch
/export/home/gk/src/illumos-gate/usr/src/tools/proto/root_i386-nd/opt/onbld/bin/i386/smatch: cpcgen.c:320 cpcgen_parse_model() warn: impossible condition '(l > 4294967295) => (0-u32max > u32max)'
/export/home/gk/src/illumos-gate/usr/src/tools/proto/root_i386-nd/opt/onbld/bin/i386/smatch: cpcgen.c:326 cpcgen_parse_model() warn: impossible condition '(l > 4294967295) => (0-u32max > u32max)'
Updated by Electric Monk over 4 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 08f1bbed5edd2a2e9c8be7b7424c32e67c2f3f2c
commit 08f1bbed5edd2a2e9c8be7b7424c32e67c2f3f2c Author: John Levon <john.levon@joyent.com> Date: 2019-03-13T19:04:48.000Z 10323 cpcgen_parse_model() gets value check wrong Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Updated by Dan McDonald over 4 years ago
- Related to Bug #11200: cpcgen needs smatch fixes again added
Actions